--- a/src/style/home.css
+++ b/src/style/home.css
@@ -3,10 +3,10 @@ body {
   height: 100%;
 }
 .el-header {
-  background-color: #B3C0D1;
-  color: #333;
+  background-color: #007BFF;
+  color: #FFFFFF;
   line-height: 60px;
 }
-.el-aside {
-  color: #333
+.el-menu-item {
+  color: #FFFFFF
 }
