--- a/src/style/record.css
+++ b/src/style/record.css
@@ -6,3 +6,26 @@ body {
   background-color: #eaeaea;
   color: #26a2ff;
 }
+
+.logo{
+  margin-top: 5%;
+  height: 30px;
+  width: 30px;
+  cursor: pointer
+}
+
+.logo_div {
+  height: 30%;
+  width: 30%;
+  margin: 0 auto
+}
+
+.line-container {
+  color: #606c76;
+  font-size: 14px;
+  font-family: "Helvetica Neue For Number", "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  box-sizing: border-box;
+  position: relative;
+  list-style: none;
+  margin-left: 4.2rem;
+}
