--- a/src/style/userCenter.css
+++ b/src/style/userCenter.css
@@ -18,3 +18,9 @@
     text-align: center;
     white-space: nowrap;
 }
+
+.submitButton{
+    display: block;
+    margin: 0 auto;
+    width: 50%
+  }
